@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction
class Employee{
    -name : String
    -birthdate : Date
    -email : String
    -phoneNumber : int
    -admission date : Date
    -taxpayerNumber : String
    -address : String
    -docNumber : String
    -jobTitle : String

+ cancelTask(Task taskToCancel)


}

class Task{
-greenSpace: GreenSpace
-selectedTask : Task
-selectedDate : LocalDate
-agenda : TaskPosition

}


class CancelEntryAgendaController{

}

class CancelEntryAgendaUI{

}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getEmployeeRepository(); employeeRepository
     + getGreenSpaceRepository(); getGreenSpaceRepository
     + getTaskRepository(); getTaskRepository

}
class EmployeeRepository{


+getEmployee(): Employee

}
class TasksRepository{
 +getAgemdaEntries(): List<ToDoEntries>
}

enum TaskStatus {
    PLANNED
    POSTPONED
    CANCELED
    DONE
    PENDING
}


CancelEntryAgendaUI .>CancelEntryAgendaController

CancelEntryAgendaController .> "1" Repositories

Repositories "1" --> "1" Repositories : getInstance()
Repositories "1" --> "1" EmployeeRepository
Repositories "1" --> "1" TasksRepository

CancelEntryAgendaController ..>Employee

EmployeeRepository "1" --> "1" Employee
TasksRepository "1" --> "1" Employee

Employee --> Task: update

Task "1" .> "1" TaskStatus
@enduml